- внес больше латчей, добавил ошибок