@@ -49,12 +49,14 @@ public class BlockingReadingVirtualVerticlePhilosophersBenchmark {
     private void test_verticle_philosophers_internal(Function<List<Object>, ? extends VerticleBase> philosopherSupplier, Consumer<Integer> eating, DeploymentOptions deploymentOptions) throws InterruptedException {
         Vertx vertx = Vertx.vertx();
         CountDownLatch allVerticlesDeployedLatch = new CountDownLatch(PHILOSOPHERS_COUNT_BASE);
+        CountDownLatch allVerticlesUnDeployedLatch = new CountDownLatch(PHILOSOPHERS_COUNT_BASE);
         CountDownLatch finishEatingLatch = new CountDownLatch(1);
         for (int i = 0; i < PHILOSOPHERS_COUNT_BASE; i++) {
             vertx.deployVerticle(philosopherSupplier.apply(List.of(i, eating)), deploymentOptions).onComplete(_ -> allVerticlesDeployedLatch.countDown());
         }
         vertx.eventBus().consumer("max_eat_attempts_has_reached", msg -> {
             System.out.println("finish eating at " + Instant.now() + ", msg: " + msg.body());
+            vertx.deploymentIDs().forEach(deploymentId -> vertx.undeploy(deploymentId).onComplete(_ -> allVerticlesUnDeployedLatch.countDown()));
             vertx.close().onComplete(_ -> finishEatingLatch.countDown());
         });
         allVerticlesDeployedLatch.await();
@@ -62,6 +64,7 @@ public class BlockingReadingVirtualVerticlePhilosophersBenchmark {
         System.out.println("start eating at " + Instant.now());
         vertx.eventBus().publish("start_barrier", "Go-go-go!");
         finishEatingLatch.await();
+        allVerticlesUnDeployedLatch.await();
     }
 
     public static void main(String[] args) throws RunnerException {
@@ -70,6 +73,7 @@ public class BlockingReadingVirtualVerticlePhilosophersBenchmark {
                 .forks(1)
                 .warmupIterations(3)
                 .measurementIterations(7)
+                .jvmArgs("--enable-preview", "-Xmx4096m")
                 .build();
         new Runner(opt).run();
     }
